appsub-sample/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: ubi
        image: registry.redhat.io/ubi8/ubi:latest
        command: ["sleep", "infinity"]
