appsub-sample/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-world
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
